updated html & color scheme
updated the color throughout and made it my own.  updated some html
mostly changing words around.

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 /*---------------------------------------------------------------------------------
-   Common Styles
+   Common Styles FF530D FF0000 3185ff 2756B5 eaba22
 ---------------------------------------------------------------------------------*/
 /*float styles*/
 .clearfix:before,
@@ -21,7 +21,7 @@
 html {
 	width: 100%;
 	height: 100%;
-	background-color: #394264;
+	background-color: #2d2620;
 }
 
 body {
@@ -29,15 +29,12 @@ body {
 	width: 98%;
 	height: 96%;
 	margin: 0.8em auto;
-	font-family: 'Lato', Calibri, Arial, sans-serif;
-	background-color: #1F253D;
+	font-family: 'Oswald', Arial,sans-serif;
+	background-color: #2d2620;
 	text-align: center;
 	-webkit-border-radius: 4px;
 	-moz-border-radius: 4px;
 	border-radius: 4px;
-	-webkit-box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.3);
-	-moz-box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.3);
-	box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.3);
 }
 
 a {
@@ -80,18 +77,17 @@ nav a {
 
 h1 {
 	font-weight: 900;
-	font-size: 3em;
+	font-size: 4.2em;
 	padding: 0.8em;
 	color: #fff;
-
 }
 
 /*style for hidden modal*/
 .overlay {
 	width: 100%;
 	height: 100%;
-	color: #fff;
-	background: #e74c3c;
+	color: #98d9a6;
+	background: #2d2620;
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -101,8 +97,8 @@ h1 {
 }
 
 .content {
-	color: #fff;
-	background: #e74c3c;
+	color: #2d2620;
+	background: #98d9a6;
 	position: relative;
 	height: auto;
 	width: 600px;
@@ -118,9 +114,9 @@ h1 {
 	text-align: center;
 	font-size: 2.4em;
 	font-weight: 300;
-	opacity: 0.8;
-	background: rgba(0,0,0,0.1);
+	background: #000;
 	border-radius: 3px 3px 0 0;
+	color: #98d9a6;
 }
 
 .content > div {
@@ -154,12 +150,17 @@ h1 {
 	text-decoration: underline;
 }
 
+.close {
+	display: block;
+	margin: 30px auto;
+	width: 200px;
+}
+
 .content > div a {
-	font-size: 0.8em;
-	background: #1F253D;
-	color: #95a5a6;
+	font-size: 1.2	em;
+	background: #2d2620;
+	color: #98d9a6;
 	padding: 0.5em 2em;
-	margin-bottom: 50px;
 	border-radius: 3px;
 }
 
@@ -169,7 +170,7 @@ h1 {
 
 .game {
 	position: relative;
-	background-color: #394264;
+	background-color: #98d9a6;
 	width: 380px;
 	height: 380px;
 	-webkit-border-radius: 4px;
@@ -177,40 +178,39 @@ h1 {
 	border-radius: 4px;
 	margin: 0 auto;
 
-	box-shadow: rgb(26, 31, 52) 1px 1px,
-    rgb(26, 31, 52) 2px 2px,
-    rgb(26, 31, 52) 3px 3px,
-    rgb(26, 31, 53) 4px 4px,
-    rgb(26, 32, 53) 5px 5px,
-    rgb(27, 32, 53) 6px 6px,
-    rgb(27, 32, 54) 7px 7px,
-    rgb(27, 32, 54) 8px 8px,
-    rgb(27, 32, 54) 9px 9px,
-    rgb(27, 33, 55) 10px 10px,
-    rgb(27, 33, 55) 11px 11px,
-    rgb(28, 33, 55) 12px 12px,
-    rgb(28, 33, 56) 13px 13px,
-    rgb(28, 34, 56) 14px 14px,
-    rgb(28, 34, 56) 15px 15px,
-    rgb(28, 34, 57) 16px 16px,
-    rgb(29, 34, 57) 17px 17px,
-    rgb(29, 34, 57) 18px 18px,
-    rgb(29, 35, 58) 19px 19px,
-    rgb(29, 35, 58) 20px 20px,
-    rgb(29, 35, 58) 21px 21px,
-    rgb(29, 35, 59) 22px 22px,
-    rgb(30, 35, 59) 23px 23px,
-    rgb(30, 36, 59) 24px 24px,
-    rgb(30, 36, 60) 25px 25px,
-    rgb(30, 36, 60) 26px 26px,
-    rgb(30, 36, 60) 27px 27px,
-    rgb(31, 37, 61) 28px 28px;
-
+	box-shadow: rgb(0, 0, 0) 1px 1px,
+    rgb(0, 0, 0) 2px 2px,
+    rgb(0, 0, 0) 3px 3px,
+    rgb(0, 0, 0) 4px 4px,
+    rgb(0, 0, 0) 5px 5px,
+    rgb(0, 0, 0) 6px 6px,
+    rgb(0, 0, 0) 7px 7px,
+    rgb(0, 0, 0) 8px 8px,
+    rgb(0, 0, 0) 9px 9px,
+    rgb(0, 0, 0) 10px 10px,
+    rgb(0, 0, 0) 11px 11px,
+    rgb(0, 0, 0) 12px 12px,
+    rgb(0, 0, 0) 13px 13px,
+    rgb(0, 0, 0) 14px 14px,
+    rgb(0, 0, 0) 15px 15px,
+    rgb(0, 0, 0) 16px 16px,
+    rgb(0, 0, 0) 17px 17px,
+    rgb(0, 0, 0) 18px 18px,
+    rgb(0, 0, 0) 19px 19px,
+    rgb(0, 0, 0) 20px 20px,
+    rgb(0, 0, 0) 21px 21px,
+    rgb(0, 0, 0) 22px 22px,
+    rgb(0, 0, 0) 23px 23px,
+    rgb(0, 0, 0) 24px 24px,
+    rgb(0, 0, 0) 25px 25px,
+    rgb(0, 0, 0) 26px 26px,
+    rgb(0, 0, 0) 27px 27px,
+    rgb(0, 0, 0) 28px 28px;
 }
 
 h2 {
 	margin: 0 auto;
-	background: #cc324b;
+	background: #98d9a6;
 	padding: 1em 0.4em;
 	font-size: 1.5em;
 	font-weight: 400;
@@ -218,17 +218,22 @@ h2 {
 	line-height: 1em;
 	border-top-left-radius: 4px;
 	border-top-right-radius: 4px;
-	color: #fff;
+	border-bottom: 2px solid #2d2620;
+	color: #2d2620;
+	font-family: 'Passion One' sans-serif;
+	text-transform: uppercase;
 }
 
 .game p {
 	margin-top: 0.5em;
 	font-size: 1.8em;
 	padding-bottom: 0.5em;
+	font-family: 'Passion One' sans-serif;
+	text-transform: uppercase;
 }
 
 #count {
-	color: #f39c12;
+	color: #2d2620;
 	font-weight: 700;
 	font-size: 1.5em;
 }
@@ -237,37 +242,27 @@ input {
 	width: 300px;
 	height: 50px;
 	display: block;
-	padding: 0.8em 0;
 	margin: 0.8em auto 0;
-	background: #50597b;
-	color: #fff;
-	border: solid 1px #1f253d;
-	-webkit-border-radius: 4px;
-	-moz-border-radius: 4px;
-	border-radius: 4px;
+	background: #2d2620;
+	color: #98d9a6;
+	border: solid 1px #98d9a6;
 }
 
 input.button {
-	background: #1F253D;
-	color: #95a5a6;
+	background: #2d2620;
+	color: #98d9a6;
 	font-size: 2em;
-	padding: 0.2em;
-	-webkit-transition: background 1s ease-in-out;
-	-moz-transition: background 1s ease-in-out;
-	-ms-transition: background 1s ease-in-out;
-	-o-transition: background 1s ease-in-out;
-	transition: background 1s ease-in-out;
+	border-radius: 20px;
+	font-family: 'Oswald',Arial,sans-serif;
+	text-transform: uppercase;
 }
 
 input.button:hover {
-	background: #e64c65;
-	color: #fff;
-	-webkit-transition: background 1s ease-in-out;
-	-moz-transition: background 1s ease-in-out;
-	-ms-transition: background 1s ease-in-out;
-	-o-transition: background 1s ease-in-out;
-	transition: background 1s ease-in-out;
-	cursor: pointer;
+	color: #B3FFC3;
+}
+
+input.button:active {
+	padding-bottom: 1px;
 }
 
 input.text {
@@ -299,24 +294,30 @@ input:focus {
 ul.guessBox {
 	height: 80px;
 	margin: 10px auto 0;
-	background: #11a8ab;
+	background: #98d9a6;
 	padding: 0.5em;
 	display: block;
 	line-height: 2em;
+	border-top: 2px solid #2d2620;
 	border-bottom-left-radius: 4px;
 	border-bottom-right-radius: 4px;
 	color: #fff;
 	overflow: auto;
 }
+
 ul.guessBox li {
 	display: inline;
-	background-color: #1a4e95;
+	background-color: #2d2620;
 	padding: 0.3em;
 	-webkit-border-radius: 4px;
 	-moz-border-radius: 4px;
 	border-radius: 4px;
 	width: 95%;
 	margin: 0.2em;
-	color: #fff;
+	color: #98d9a6;
 	word-wrap: break-word;
+}
+
+.hint {
+	border-top: 2px solid #2d2620;
 }
